--- a/crawlers/requirements.txt
+++ b/crawlers/requirements.txt
@@ -1,6 +1,6 @@
 regex == 2023.3.23
 requests == 2.25.1
-beautfiulsoup4 == 4.10.0
+BeautifulSoup4 == 4.10.0
 urllib3 == 1.26.5
 asyncio == 3.4.3
 aiohttp == 3.8.4
