--- a/crawlers/requirements.txt
+++ b/crawlers/requirements.txt
@@ -7,3 +7,6 @@ aiohttp == 3.8.4
 certifi == 2020.6.20
 aiohttp_socks == 0.8.0
 pysimplegui == 4.60.4
+numpy == 1.24.2
+scikit-learn == 1.2.2
+pandas == 2.0.0
