--- a/crawlers/ping2/Cargo.toml
+++ b/crawlers/ping2/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tor-stream = "0.3.0"
 
 [dependencies.tokio]
 version = "1.28.2"
